--- a/Publisher/WebPublisher/Features/SendMessage/Index.cshtml
+++ b/Publisher/WebPublisher/Features/SendMessage/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.Mvc.Html
-@inherits System.Web.Mvc.WebViewPage<WebPublisher.Features.SendMessage.SendMessageViewModel>
+@model WebPublisher.Features.SendMessage.SendMessageViewModel
 
 <div class="jumbotron">
     @using (Html.BeginForm("SendMessage", "SendMessage"))
